Actions
Bug #13137
closedzfs: warn: inconsistent indenting
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
smatch errors:
/code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/fs/zfs/lua/ldebug.c:470 getfuncname() warn: inconsistent indenting /code/illumos-gate/usr/src/tools/proto/root_i386-nd/opt/onbld/bin/i386/smatch: ../../common/fs/zfs/metaslab.c:2375 metaslab_load_impl() warn: inconsistent indenting
Just a whitespace change.
Updated by Electric Monk over 1 year ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9cfcc091666d5546e419c22f4963474d11673f5e
commit 9cfcc091666d5546e419c22f4963474d11673f5e Author: Toomas Soome <tsoome@me.com> Date: 2020-09-14T21:56:44.000Z 13137 zfs: warn: inconsistent indenting Reviewed by: Marco van Wieringen <mvw@planets.elm.net> Reviewed by: C Fraire <cfraire@me.com> Approved by: Robert Mustacchi <rm@fingolfin.org>
Actions